    Older devices timeout while executing JavaScript.
 5) DO NOT use Opera Mini it renders JavaScript output server side, therefore
    they might record the private key you generated.
 6) Art Wallet does not work properly in IE8 due to CSS limitations.
 7) BIP38 most likely will not work on mobile devices due to hardware limitations.

Here is a signed list of file names and version history.

2016-07-31: status ACTIVE
bitaddress.org-v3.2.1-SHA256-42c3bcb643c451689e5bd1499ed4b516be2da06d2fe3886b0dd15b8fc2525ecd.html
 - BigInteger modInverse should be positive
 - throw if modInverse 0
 - improve BigInteger constructor so that it works if caller forgets 'new'
 - add unit tests for BigInteger
 - thanks to dooglus, jprichardson, dcousens

2016-02-19: status ACTIVE
bitaddress.org-v3.2.0-SHA256-ad4fd171c647772aa76d0ce828731b01ca586596275d43a94008766b758e8736.html
 - switch languages without full page load
 - add BIP38 encryption to Bulk Wallet
 - use compressed addresses on Single/Paper/Bulk Wallet 
 - add compressed address option on Brain Wallet

2016-01-17: status ACTIVE
bitaddress.org-v3.1.1-SHA256-8277de0a0c77761caa8f546c9885c36a3134a94823b14e24d364b86abb3a9ab3.html
 - refactor translations into separate files per culture.

2015-11-22: status ACTIVE
bitaddress.org-v3.1.0-SHA256-c3d4d8da8fc6980435a520dff562b7f831b2f6037ec2d4dd6bf76c5321873303.html
 - add BIP38 encryption on Wallet Details tab.

2015-10-25: status ACTIVE
bitaddress.org-v3.0.1-SHA256-24d2d7f047a9aa217bf69f3ef344c972c151b1e3f6a8aa86ceb9a3be62884bc0.html
 - fix for session log not keeping track of keys from "Wallet Details" tab before entropy is collected.

2015-10-25: status ACTIVE
bitaddress.org-v3.0.0-SHA256-4781574ca09c07f65d1966619f37a762aac6decd8732cacc85b2f2f972f82751.html
 - add session log icon that shows all the key pairs generated during the current session.

2015-08-16: status ACTIVE
bitaddress.org-v2.9.11-SHA256-40376eddc790a63d9afcfb72c0a45002827da965f3bfe6ba8c330e697bf188b2.html