@@ -31,6 +31,10 @@ END USER NOTES:
 
 Here is a signed list of file names and version history.
 
+2016-08-21: status ACTIVE
+bitaddress.org-v3.2.2-SHA256-f4d047c264a2b71946de319482a9365e56d8d7289dd85a352da3b1448b7647df.html
+ - version bump for unix line endings
+
 2016-07-31: status ACTIVE
 bitaddress.org-v3.2.1-SHA256-42c3bcb643c451689e5bd1499ed4b516be2da06d2fe3886b0dd15b8fc2525ecd.html
  - BigInteger modInverse should be positive
@@ -329,11 +333,11 @@ bitaddress.org-v0.1-SHA1-f40e706490f3eb2be56c31ddbf4c8646cd51ef40.html
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJXujHeAAoJEIdJe5Fjl09a2bkH/RU7iDEGx5P30swI3B+umDDw
-1X1Oe+9JUedIH3unbo63jh+UeMbb2/YbjEbE3BuqxEbm1Ue6/LLufnDCk/s2VfVC
-61FueWmjwUH2+v+51tBskExOfg5t45QR5H1yXSM5XaWN39eSDFKscfQBoWRcHORM
-ua/8vmhqYp/QH90tzhrLmao+DJG6TVAuCJRa0Uawv2YzNlIQ3ahSHvLSK1H1cAkA
-Ygpn+9sBNPcnA28sGVmeruSOvSZLvK4vJAw5+Ybly0aLVGJJ2hdpWmxymPw1nwn5
-ZtTTnnzPKcUirJUz2FN8UhQIeMT1kIuu9uWhWJeUnWU77Fx5cyEAPTA4HThZBQc=
-=nd+V
+iQEcBAEBAgAGBQJXuj+4AAoJEIdJe5Fjl09a7wEIAJIfRmwqcr1oniY/arJpr+e6
+a97QMVgpzFrj2G3k8odW6MMowjnWOeYmzhdiNQ+9crmKUFjElrzzUEOg0Mh32Ix3
+iNVspXlHwgYfc5Xj7qtkWRPCoZ9u4TmOY5HA0gL7nsPZOrEbXjbYlknTTJertbpN
+gNZBaCxKQD2U4goUVXMyby9+3lnam6IOegpOqWQRxq8ZmPo+bbtjWpifp9roSaoG
+6fJb6T3fEx3aXcwamJktkh5Xh6WivUJnkR8vgLLbWEN4M1HXg1hCqipMnw9cw/U/
+FXSCSOv5Iw0thYTBhqR2NeRWdUEu81l95t9HXxjIKc75ej4J14QaPSDgt46PQvA=
+=3IgE
 -----END PGP SIGNATURE-----
