@@ -1,8 +1,8 @@
 {
   "name": "bitaddress.org",
-  "version": "3.2.1",
-  "sha1sum": "8b4ffcadf58fea559b590c4ab5abf1bfe187908a",
-  "sha256sum": "42c3bcb643c451689e5bd1499ed4b516be2da06d2fe3886b0dd15b8fc2525ecd",
+  "version": "3.2.2",
+  "sha1sum": "324a332b3964f1631a4fb6e070b7f5748e5672f8",
+  "sha256sum": "f4d047c264a2b71946de319482a9365e56d8d7289dd85a352da3b1448b7647df",
   "description": "Open Source JavaScript Client-Side Bitcoin Wallet Generator",
   "main": "Gruntfile.js",
   "dependencies": {
